[tool.poetry]
name = "rag-overview"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.36.0"
pydantic = "^2.8.2"
python-dotenv = "^1.0.1"
tiktoken = "^0.7.0"
numpy = "^1.26.4"
lancedb = "^0.10.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.3"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
